#20 - Add coordinate and distance filter for stops. Closes #20.
